# net-audit-scanner

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  RDP_netascan.md  README.md  clippy.toml
.atl/: skill-registry.md
.engram/: manifest.json
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: benchmark.rs
data/manuf/: manuf
docs/: Gemfile  _config.yml  index.md  user-guide.md
docs/assets/css/: custom.css  custom.scss
helper/: __init__.py  nmap_bridge.py  requirements.txt  shodan_check.py
openspec/: config.yaml
openspec/changes/archive/2026-05-12-network-discovery/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-12-project-scaffold/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-13-cve-engine/: archive-report.md  design.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-13-device-fingerprint/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-13-oui-fingerprint/: design.md  proposal.md  verify-report.md
openspec/changes/archive/2026-05-13-port-scanner/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-13-report-generator/: archive-report.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-05-13-scan-persistence/: design.md
openspec/changes/archive/2026-05-13-security-checks/: design.md  (+4 more)
openspec/changes/cve-engine/: proposal.md
openspec/changes/device-enrichment/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/oui-fingerprint/: tasks.md
openspec/changes/report-generator/: design.md
openspec/changes/scan-persistence/: tasks.md
openspec/changes/security-checks/: exploration.md  tasks.md
openspec/specs/cve-correlation/: spec.md
openspec/specs/device-fingerprint/: spec.md
openspec/specs/network-discovery/: spec.md
openspec/specs/oui-database-update/: spec.md
openspec/specs/oui-fingerprint/: spec.md
openspec/specs/port-scanning/: spec.md
openspec/specs/report-generation/: spec.md
openspec/specs/serve-dashboard/: spec.md
sdd/archive/2026-05-13-device-fingerprint/: verify-report.md
sdd/scan-persistence/: exploration.md  proposal.md
sdd/serve-dashboard/: spec.md
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs  persist.rs  report.rs  scan.rs  serve.rs  setup.rs  update.rs
src/config/: mod.rs
src/cve/: cache.rs  client.rs  mod.rs  models.rs  parser.rs
src/enrichment/: mac_vendor.rs  mdns.rs  mod.rs  snmp.rs
src/fingerprint/: mod.rs
src/report/: engine.rs  mod.rs  view_model.rs
src/report/templates/: report.html.tera
src/scanner/: capabilities.rs  discovery.rs  mod.rs  models.rs  oui.rs  ports.rs  services.rs
src/security/: creds_db.rs  mod.rs
src/server/: mod.rs
src/server/static/: index.html
tests/: cli_tests.rs  cve_tests.rs  enrichment_pipeline_tests.rs  report_cli_tests.rs  report_tests.rs  scanner_tests.rs
tests/fixtures/: manuf.txt  proc_net_arp.txt  scan_result.json
(+19 files in other folders)
