[package]
name = "netascan"
version = "0.2.0"
edition = "2024"
description = "Net Audit Scanner"
license = "MIT"

[[bin]]
name = "netascan"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
pnet = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
mdns-sd = "0.11"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
axum = { version = "0.7", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
thiserror = "1"
ipnetwork = "0.20"
macaddr = { version = "1", features = ["serde"] }
dirs = "5"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
regex = "1"
include_dir = "0.7"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = "0.5"
tokio-test = "0.4"
wiremock = "0.6.5"
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"

[package.metadata.deb]
name = "netascan"
maintainer = "Jorge Alonso <jorge@jorgealonsodev.com>"
copyright = "2026, Jorge Alonso"
license-file = ["LICENSE", "0"]
extended-description = """\
Net Audit Scanner — discovers devices on your LAN, fingerprints services,
enriches with SNMP/mDNS/vendor data, checks for known CVEs, tests default
credentials, and generates HTML/JSON reports — all from a single command."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/netascan", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/netascan/README.md", "644"],
    ["docs/user-guide.md", "usr/share/doc/netascan/user-guide.md", "644"],
]

[[bench]]
name = "benchmark"
harness = false
